--- a/recipes/pbmasala.html
+++ b/recipes/pbmasala.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Paneer Butter Masala</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/pbmasala.html"><h3>Paneer Butter Masala</h3></a></li>
-    </ul>
+    <h1>Paneer Butter Masala</h1>
+    <img src="../img/pbmasala.jpeg" alt="Paneer Butter Masala" height="200" width="200">
 </body>
 </html>
