--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/pbmasala.html"><h3>Paneer Butter Masala</h3></a></li>
+        <li><a href="recipes/pbmasala.html"><h2>Paneer Butter Masala</h2></a></li>
+        <li><a href="recipes/fried-rice.html"><h2>Fried Rice</h2></a></li>
     </ul>
 </body>
 </html>
