Add placeholder for akki roti

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/pbmasala.html"><h2>Paneer Butter Masala</h2></a></li>
         <li><a href="recipes/fried-rice.html"><h2>Fried Rice</h2></a></li>
+        <li><a href="recipes/akki-roti.html"><h2>Akki Roti</h2></a></li>
     </ul>
 </body>
 </html>
