Add ingriedients and steps for Fried rice

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -8,5 +8,48 @@
 <body>
     <h1>Fried Rice</h1>
     <img src="../img/fried-rice.jpg" alt="Fried Rice" height="310" width="310">
+    <p>Fried Rice is an Asian dish made by stir frying cooked rice in a wok with vegetables, soya sauce and
+        sometimes with meat & eggs as well. You will find numerous versions across Asia, made with varying
+        ingredients like onions, scallions, preserved meat, garlic etc.
+        Though Fried Rice originated in the Chinese cuisine, it is a staple in lot of other Asian countries like
+        Indonesia, Thailand, Japan and India. Perfectly cooked grainy & non-sticky rice, the right amount of sauce &
+        high heat is what makes any fried rice the best.</p>
+    <h2>INGREDIENTS (US CUP = 240ML )</h2>
+    <ul>
+        <li>1 cup Rice</li>
+        <li>1 tablespoon Garlic</li>
+        <li>2 tablespoons oil</li>
+        <li>1 tablespoon Soya sauce</li>
+        <li>1 teaspoon Vinegar</li>
+        <li>½ teaspoon Black pepper</li>
+        <li>¼ to ½ cup Carrots</li>
+        <li>¼ cup Bell peppers</li>
+        <li>¼ cup French beans</li>
+        <li>¼ cup Green onions</li>
+        <li>¼ cup Cabbage</li>
+        <li>1 green chili</li>
+    </ul>
+    <h2>Preparation</h2>
+    <ol>
+        <li>Skip this section if you have precooked rice. Wash rice a few times till the 
+            water runs clear.</li>
+        <li>Soak it for at least 10 mins. Meanwhile bring 4 to 5 cups water to a boil in 
+            a large pot.</li>
+        <li>When the water begins to boil rapidly, drain the rice and add it to the water. 
+            Pour 1 tsp oil to prevent the rice from turning sticky.</li>
+        <li>Cook rice till al dente. Rice must not be mushy but has to be grainy.</li>
+        <li>Drain off the rice to a colander. Cool it completely & fluff it up with a fork.</li>
+        <li>While the rice cools, chop the veggies and garlic. Keep aside 2 tablespoons of 
+            green onions for garnish.</li>
+        <li>Heat a wok with oil on the highest flame and fry chopped garlic slightly just 
+            for 30 to 40 seconds.</li>
+        <li>Next add all the chopped vegetables and fry for 2 to 3 minutes just until 
+            half cooked. They should be crunchy and not soft.</li>
+        <li>Add soya sauce. Then add the optional ingredients vinegar and half tsp 
+            sugar. Sugar helps to preserve the bright colors of veggies and helps to balance the flavors.</li>
+        <li>Immediately add cooled rice, ¼ teaspoon salt and black pepper. Fry the vegetable fried rice for 2 mins.</li>
+        <li>Garnish veg fried rice with fresh green onions. Tastes good on its 
+            own but you can also pair it with veg manchurian or chilli paneer.</li>
+    </ol>
 </body>
 </html>
