Add ingriedients and steps for Akki roti

--- a/recipes/akki-roti.html
+++ b/recipes/akki-roti.html
@@ -8,5 +8,52 @@
 <body>
     <h1>Akki Roti</h1>
     <img src="../img/akki-roti.jpg" alt="Akki Roti" height="310" width="310">
+    <p>Akki Roti is a flatbread made with rice flour, spices, herbs and vegetables. 
+        These are a popular Breakfast from Karnataka Cuisine. “Akki” is a 
+        Kannada word meaning “rice” and “roti” are “flatbreads”. So Akki 
+        roti translates to rice roti. These are not only gluten-free but also delicious 
+        & easy to make. Akki rotti are usually eaten with coconut chutney, 
+        but any other chutney, Sagu or mixed vegetable curry goes well.
+    </p>
+    <h2>INGREDIENTS</h2>
+    <ul>
+        <li>1 cup rice flour</li>
+        <li>1 small onion </li>
+        <li>3 tablespoons coconut</li>
+        <li>½ carrot</li>
+        <li>2 green chilli</li>
+        <li>2 to 3 tablespoons coriander leaves</li>
+        <li>½ teaspoon cumin</li>
+        <li>1/3 teaspoon Salt</li>
+        <li>½ teaspoon ginger grated</li>
+        <li>water</li>
+        <li>1 tablespoon oil</li>
+    </ul>
+    <h2>PREPARATION</h2>
+    <ol>
+        <li>Wash and chop very finely 1 small onions, 2 green 
+            chilies and handful of coriander leaves. Grate ½ carrot 
+            & ½ teaspoon ginger. If using sabsige, rinse well and chop finely.</li>
+        <li>Add 1 cup flour to a large mixing bowl along 
+            with 1/3 teaspoon salt, ½ teaspoon cumin, chopped onions, 
+            chilies, coriander leaves and carrots. Mix everything well. You can 
+            also add about 2 to 3 tablespoons grated coconut & 2 to 3 tablespoons dill leaves.</li>
+        <li>Pour water little by little and make a soft dough. 
+            The dough must be smooth and moist. Divide the dough to 4 equal balls.
+             Roll to smooth. Keep the bowl covered to prevent drying up.
+        </li>
+        <li>You can make akki roti on a greased banana leaf, moist handkerchief, 
+            foil or parchment paper. 
+        </li>
+        <li>Place a ball on the moist cloth or foil or greased banana leaf. 
+        </li>
+        <li>Begin to spread it lightly with your fingers to make a round roti. 
+            If the edges of akki roti crack, then dip your fingers in water and join the cracks.
+             Then continue to spread it.  
+        </li>
+        <li>It can be made thick or thin to suit your taste. 
+            If making thick, make 3 finger sized wholes with one and half inches apart.
+        </li>
+    </ol>
 </body>
 </html>
