Add ingriedients and steps of Paneer Butter Masala

--- a/recipes/pbmasala.html
+++ b/recipes/pbmasala.html
@@ -8,5 +8,82 @@
 <body>
     <h1>Paneer Butter Masala</h1>
     <img src="../img/pbmasala.jpeg" alt="Paneer Butter Masala" height="200" width="200">
+    <p>Paneer Butter Masala, also known as butter paneer is a rich & creamy curry made with paneer, spices, onions, tomatoes, cashews and butter. 
+        As the name denotes, the curry is cooked in butter which imparts it's characteristic buttery flavor to the dish.</p>
+    <h2>INGREDIENTS</h2>
+    <ul>
+        <li>1 tablespoon oil</li>
+        <li>2 green cardamoms (or ¼ to ⅓ tsp ground cardamom, elaichi)</li>
+        <li>1 cup onions cubed, 3 medium</li>
+        <li>1½ to 2 cups tomatoes finely chopped (3 large)</li>
+        <li>¾ teaspoon salt (adjust to taste)</li>
+        <li>¾ teaspoon sugar (optional)</li>
+        <li>12 to 14 cashew nuts (or 12 almonds)</li>
+        <li>¾ to 1 teaspoon Kashmiri red chilli powder (or paprika)(adjust for best color)</li>
+        <li>¾ to 1 teaspoon garam masala powder (adjust to taste)</li>
+        <li>1 teaspoon coriander powder (daniya powder) (optional)</li>
+        <li>1 cup water (to blend)</li>
+        <li>1½ to 2 tablespoon Butter
+        </li>
+        <li>1½ teaspoon ginger garlic paste (or ¾ inch ginger, 3 medium garlic cloves, refer notes)
+        </li>
+        <li>½ cup water (adjust as required, to cook the gravy)
+        </li>
+        <li>200 to 250 grams paneer (2 heaped cups diced)
+        </li>
+        <li>1 teaspoon kasuri methi (dried fenugreek leaves)
+        </li>
+        <li>3 tablespoon cream (heavy cream, whipping cream or cooking cream)
+        </li>
+        <li>2 tablespoon coriander leaves (cilantro finely chopped) (for garnish)
+        </li>
+    </ul>
+    <h2>PREPARATION</h2>
+    <ol>
+        <li>Heat oil in a pan. Add green cardamoms & onions. 
+            Stir fry until they turn transparent to light pink. (
+            If you do not have ginger garlic paste for this recipe,
+            you may add chopped ginger and garlic along with onions)
+        </li>
+        <li>
+            Next add tomatoes & salt. Saute for 3 minutes. 
+            Cover and cook till the onion & tomatoes turn soft & completely mushy.
+        </li>
+        <li>Add garam masala, coriander powder, cashew nuts, red chili powder & sugar (optional).</li>
+        <li>Stir fry this till the onion tomato masala turns aromatic. 
+            This takes 2 to 3 minutes.
+        </li>
+        <li>Turn off the stove & cool this completely. </li>
+        <li>Transfer to a blender & pour water. 
+            Blend to a really silky smooth puree. If it is not smooth,
+            filter it through a strainer to another bowl. 
+            Set this aside. 
+        </li>
+        <li>Heat butter in the same pan. Optional – When the butter melts, 
+            add cinnamon, cloves, green cardamoms & bay leaf. 
+        </li>
+        <li>Reduce the flame to low, saute ginger garlic paste for a minute until it smells aromatic.
+        </li>
+        <li>Stir in the blended onion tomato puree.
+            Taste test your puree & optionally you may add more red chili powder for a deeper color.
+        </li>
+        <li>Pour more water & mix well.
+             Bring it to a rolling boil. 
+             Reduce the heat to medium and cook covered until the gravy cooks down to a thicker consistency. 
+             Keep stirring every few minutes.
+        </li>
+        <li>You know the gravy is done when it turns thick and traces of fat is visible on the gravy.
+             Taste test and add more salt or garam masala if needed.
+        </li>
+        <li>Lower the flame completely, add cubed paneer. 
+            Take kasuri methi to your palm and crush it in between your palms. Sprinkle this.
+        </li>
+        <li>Mix & cook covered on a low heat for 2 minutes. 
+            Turn off and pour cream (save some for garnish) & stir.
+        </li>
+        <li>Transfer paneer butter masala to a serving bowl.
+            Garnish with more cream & chopped coriander leaves. Serve this with butter naan , Basmati rice or jeera rice.
+        </li>
+    </ol>
 </body>
 </html>
