--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -29,7 +29,7 @@
         <li>¼ cup Cabbage</li>
         <li>1 green chili</li>
     </ul>
-    <h2>Preparation</h2>
+    <h2>PREPERATION</h2>
     <ol>
         <li>Skip this section if you have precooked rice. Wash rice a few times till the 
             water runs clear.</li>
