Change the image in Paneer Butter Masala
To improve quality

--- a/recipes/pbmasala.html
+++ b/recipes/pbmasala.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Paneer Butter Masala</h1>
-    <img src="../img/pbmasala.jpeg" alt="Paneer Butter Masala" height="200" width="200">
+    <img src="../img/pbmasala.jpeg" alt="Paneer Butter Masala" >
     <p>Paneer Butter Masala, also known as butter paneer is a rich & creamy curry made with paneer, spices, onions, tomatoes, cashews and butter. 
         As the name denotes, the curry is cooked in butter which imparts it's characteristic buttery flavor to the dish.</p>
     <h2>INGREDIENTS</h2>
