Add CSS file and basic style to all pages

--- a/recipes/akki-roti.html
+++ b/recipes/akki-roti.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Akki Roti</title>
 </head>
 <body>
-    <h1>Akki Roti</h1>
-    <img src="../img/akki-roti.jpg" alt="Akki Roti" height="310" width="310">
+    <h1 class="center">Akki Roti</h1>
+    <img class="center" src="../img/akki-roti.jpg" alt="Akki Roti" height="310" width="310">
     <p>Akki Roti is a flatbread made with rice flour, spices, herbs and vegetables. 
         These are a popular Breakfast from Karnataka Cuisine. “Akki” is a 
         Kannada word meaning “rice” and “roti” are “flatbreads”. So Akki 
@@ -15,7 +16,7 @@
         & easy to make. Akki rotti are usually eaten with coconut chutney, 
         but any other chutney, Sagu or mixed vegetable curry goes well.
     </p>
-    <h2>INGREDIENTS</h2>
+    <h2 class="center">INGREDIENTS</h2>
     <ul>
         <li>1 cup rice flour</li>
         <li>1 small onion </li>
@@ -29,7 +30,7 @@
         <li>water</li>
         <li>1 tablespoon oil</li>
     </ul>
-    <h2>PREPARATION</h2>
+    <h2 class="center">PREPARATION</h2>
     <ol>
         <li>Wash and chop very finely 1 small onions, 2 green 
             chilies and handful of coriander leaves. Grate ½ carrot 
