--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Fried Rice</title>
 </head>
 <body>
     <h1>Fried Rice</h1>
-    <img src="../img/fried-rice.jpg" alt="Fried Rice" height="310" width="310">
+    <img class="center" src="../img/fried-rice.jpg" alt="Fried Rice" height="310" width="310">
     <p>Fried Rice is an Asian dish made by stir frying cooked rice in a wok with vegetables, soya sauce and
         sometimes with meat & eggs as well. You will find numerous versions across Asia, made with varying
         ingredients like onions, scallions, preserved meat, garlic etc.
