--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/pbmasala.html"><h2>Paneer Butter Masala</h2></a></li>
-        <li><a href="recipes/fried-rice.html"><h2>Fried Rice</h2></a></li>
-        <li><a href="recipes/akki-roti.html"><h2>Akki Roti</h2></a></li>
+        <li><a href="recipes/pbmasala.html"><h2 class="link">Paneer Butter Masala</h2></a></li>
+        <li><a href="recipes/fried-rice.html"><h2 class="link">Fried Rice</h2></a></li>
+        <li><a href="recipes/akki-roti.html"><h2 class="link">Akki Roti</h2></a></li>
     </ul>
 </body>
 </html>
