--- a/recipes/pbmasala.html
+++ b/recipes/pbmasala.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paneer Butter Masala</title>
 </head>
 <body>
     <h1>Paneer Butter Masala</h1>
-    <img src="../img/pbmasala.jpeg" alt="Paneer Butter Masala" >
+    <img class="center" src="../img/pbmasala.jpeg" alt="Paneer Butter Masala" >
     <p>Paneer Butter Masala, also known as butter paneer is a rich & creamy curry made with paneer, spices, onions, tomatoes, cashews and butter. 
         As the name denotes, the curry is cooked in butter which imparts it's characteristic buttery flavor to the dish.</p>
     <h2>INGREDIENTS</h2>
